Fixed various bugs (#2366)
- Fixed scrollbar always being visible even when in game
- Fixed backwards navigation getting stuck on profile
- Fixed custom emotes being allowed to have a space or colon in them
(doesn't work with emotify)
- Added alignment coloration to role groups based on first role in role
group

--- a/react_main/src/css/main.css
+++ b/react_main/src/css/main.css
@@ -58,12 +58,6 @@
   }
 }
 
-/* Prevent scrollbar gaps when MUI menus/modals open */
-body {
-  overflow-y: scroll;
-  width: 100%;
-}
-
 html,
 body {
   max-width: 100%;
